# Embedded_CLion

./: .cproject  .gitignore  .mxproject  .project  CLionTest.ioc  CMakeLists.txt  CMakeLists_.txt  ExpectAutoProgram  LICENSE  README.md  toolchain.cmake
Drivers/CMSIS/Device/ST/STM32F7xx/Source/Templates/: system_stm32f7xx.c
Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal.h  stm32f7xx_hal_def.h
Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Src/: main.c  stm32f7xx_hal_msp.c
lib/: main_gen.c  main_gen.h  stm32f7xx_hal.h  stm32f7xx_hal_conf.h  stm32f7xx_it.c
src/: main.c  main.h
